--- a/views/comingsoon.hbs
+++ b/views/comingsoon.hbs
@@ -1,14 +1,14 @@
 <div class="valign-wrapper bgimg">
     <div class="center-align middle">
-        <h2>QuizInc presents School Quiz</h1>
+        <h3 class="commingsoontext">QuizInc presents Rewind  Quiz</h3>
             <p id="para">Begins in...</p>
             <hr class="comsoon">
-            <h2 id="demo">
+            <h3 id="demo"></h3>
     </div>
 </div>
 
 <script>
-    let deadline = new Date("apr 10, 2021 09:59:00 GMT+05:30").getTime();
+    let deadline = new Date("dec 30, 2022 18:00:00 GMT+05:30").getTime();
 
     let x = setInterval(() => {
 
