--- a/views/finished.hbs
+++ b/views/finished.hbs
@@ -1,7 +1,7 @@
 <div class="valign-wrapper finished-main">
     <div class="center-align middle">
         <div id="particles-js"></div>
-        <h1>You've finished the quiz!</h1>
+        <h1 class="finished-main-tag">You've finished the quiz!</h1>
         <h5>Thank you for participating. Stay tuned for the results.</h5>
     </div>
 </div>
