--- a/views/layouts/login.hbs
+++ b/views/layouts/login.hbs
@@ -10,7 +10,63 @@
         crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <title>Login | School Quiz</title>
+    <title>Login | Rewind Quiz</title>
+
+    <style>
+        .signinbox{
+            background: linear-gradient(90deg, rgb(88, 176, 184) 0%, rgba(16,62,255,1) 100%);
+        }
+        .about-title{
+            font-size: 40px;
+            font-weight: 600;
+            color:#fff;
+            margin-top: 30px;
+            margin-bottom: 10px;
+        }
+        .rules-title{
+            font-size: 30px;
+            color: #fff;
+            font-weight: 600;
+            margin-top: 30px;
+            margin-bottom: 10px;
+            background: linear-gradient(90deg, rgb(88, 176, 184) 0%, rgba(16,62,255,1) 100%);
+            padding: 10px;
+            border-radius: 5px;
+        }
+        .btn{
+            background-color: #fa7400;
+        }
+        .welcometext{
+            color: #fff;
+            font-size: 30px;
+            font-weight: 600;
+        }
+        .divider{
+            height: 2px;
+        }
+        .rules-divider{
+            height: 4px;
+            background-color: #fff;
+        }
+        .rules-text{
+            color: #fff;
+            padding: 10px;
+        }
+        .rules-text li{
+            padding: 10px;
+            margin-bottom: 10px;
+            background-color: #e87613;
+            border-radius: 7px;
+            font-weight: 400;
+        }
+        .page-footer-login{
+            background: #000;
+            border-top: 2px solid #fff;
+        }
+
+    </style>
+
+
 </head>
 
 <body class="login-back grey lighten-4">
