--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,7 +10,35 @@
         crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <title>School Quiz</title>
+    <title>Rewind Quiz</title>
+
+    <style>
+        .username{
+            color: #fff;
+            font-weight: 600;
+        }
+        .page-header{
+            
+            border-bottom: 1px solid #fff;
+        }
+        .letsbegin{
+            color: #e87613;
+            font-weight: 600;
+        }
+        .timeleft{
+            color: rgba(16,62,255,1);
+            font-weight: 600;
+        }
+        .page-footer{
+            margin-bottom: -20px;
+            border-top: 2px solid #fff;
+        }
+        .footerend{
+            text-align: center;
+            padding-bottom: 10px;
+        }
+    </style>
+
 </head>
 
 <body class="grey lighten-4 quiz-body">
