--- a/views/partials/_footer.hbs
+++ b/views/partials/_footer.hbs
@@ -23,11 +23,8 @@
             </div>
         </div>
     </div>
-    <div class="footer-copyright">
-        <div class="container">
-            Copyright &copy; <span id="year">2020</span> QuizInc
-            {{!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> --}}
-        </div>
+    <div class="footerend">
+        <h5>Copyright &copy; 2022 QuizInc</h5>
     </div>
 </footer>
 
