--- a/views/layouts/finished.hbs
+++ b/views/layouts/finished.hbs
@@ -9,16 +9,60 @@
         integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
         crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style2.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <title>School Quiz</title>
+    <title>Rewind Quiz</title>
+
+    <style>
+        .page-header{
+            background-color: #000;
+            position: fixed;
+            z-index: 100;
+            border-bottom: 1.5px solid #fff;
+        }
+        .page-footer{
+            background-color: #000;
+            border-top: 2px solid #fff;
+            margin-bottom: 0px;
+        }
+        .footerend{
+            font-size: 20px;
+            text-align: center;
+            margin-bottom: -12px;
+            padding-bottom: 5px;
+            margin-top: -20px;
+        }
+
+        .middle{
+            background: linear-gradient(90deg, rgb(88, 176, 184) 0%, rgba(16,62,255,1) 100%);
+            padding: 50px;
+        }
+        @media (max-width:700px){
+            .middle{
+                padding: 30px;
+            }
+        }
+        .finished-main-tag{
+            color: #fff;
+            font-weight: 600;
+            font-size: 50px;
+        }
+        .middle h5{
+            color: #fff;
+            font-weight: 600;
+            margin-top: 30px;
+        }
+
+    </style>
+
+
 </head>
 
-<body class="grey lighten-4 finished-body">
+<body>
     {{>_header}}
-    <div class="container">
 
         {{{body}}}
-    </div>
+
     {{>_footer}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
