--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -1,6 +1,6 @@
 <nav class="page-header">
     <div class="nav-wrapper container">
-        <a href="#!" class="brand-logo">QuizInc</a>
+        <a href="#!" class="brand-logo endlogo">QuizInc</a>
         <ul class="right">
             <li><a id="logout" href="/auth/logout">Log Out</a></li>
         </ul>
