--- a/views/comingsoon.hbs
+++ b/views/comingsoon.hbs
@@ -1,11 +1,13 @@
 <div class="valign-wrapper bgimg">
     <div class="center-align middle">
+        <div id="particles-js"></div>
         <h3 class="commingsoontext">QuizInc presents Rewind  Quiz</h3>
             <p id="para">Begins in...</p>
             <hr class="comsoon">
             <h3 id="demo"></h3>
     </div>
 </div>
+<script src="/js/particles.min.js"></script>
 
 <script>
     let deadline = new Date("dec 30, 2022 18:00:00 GMT+05:30").getTime();
