--- a/views/endpage.hbs
+++ b/views/endpage.hbs
@@ -1,5 +1,5 @@
-<div class="valign-wrapper finished-main">
-    <div class="center-align middle">
+<div class="valign-wrapper bgimg">
+    <div class="center-align middleforend">
         <div id="particles-js"></div>
         <h1 class="finished-main-tag">The Rewind Quiz Has Ended</h1>
         <h5>Better luck next time.Stay tuned for the upcoming evets</h5>
