--- a/views/login.hbs
+++ b/views/login.hbs
@@ -30,7 +30,7 @@
                                 <li>2.  The participants will get a total of 30 minutes to answer all the questions.</li>
                                 <li>3. The participants score +10 point for each correct answer. There is no negative marking for incorrect responses.</li>
                                 <li>
-                                    4. The questions 3,7,11,15 will be star-marked. Those who answer them will be given priority in case of tie-breaker.
+                                    4. The questions 3,7,11 and 15 will be star-marked. Those who answer them will be given priority in case of tie-breaker.
                                 </li>
                                 <li>5. Do not use any punctuation, commas, or extra words like 'a', 'or', 'and', etc.
                                     Keep spaces
