--- a/views/finished.hbs
+++ b/views/finished.hbs
@@ -14,7 +14,7 @@
 </script>
 <script src="/js/particles.min.js"></script>
 <script>
-    {{!-- setTimeout(() => {
+    setTimeout(() => {
         document.getElementById("logout").click();
-    }, 3000); --}}
+    }, 3000);
 </script>
