--- a/views/endpage.hbs
+++ b/views/endpage.hbs
@@ -2,7 +2,7 @@
     <div class="center-align middleforend">
         <div id="particles-js"></div>
         <h1 class="finished-main-tag">The Rewind Quiz Has Ended</h1>
-        <h5>Better luck next time.Stay tuned for the upcoming evets</h5>
+        <h5>Better luck next time.Stay tuned for the upcoming events</h5>
     </div>
 </div>
 
